(style): fix input alignment in sw

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -34,6 +34,7 @@ $input-inactive-underline-fill: $color-bg-med;
         padding-left: 0px;
         width: 100%;
         color: $color-input-text;
+        font-size: 16px;
 
         &:focus {
           box-shadow: none;
@@ -65,7 +66,7 @@ $input-inactive-underline-fill: $color-bg-med;
     .swui-input-label {
       pointer-events: none;
       position: absolute;
-      font-size: .9rem;
+      font-size: 16px;
     }
 
     .swui-input-underline {
